--- a/node4/views/chat/chat.ejs
+++ b/node4/views/chat/chat.ejs
@@ -50,7 +50,7 @@
         var socket = io();
 
         socket.on('toClient', function(data){
-            $('#chatBody').append('<li>' + data + '</li>');
+            $('#chatBody').append('<li><strong>'+ data.displayname +'</strong>' + data.message + '</li>');
         });
 
         $(document).ready(function() {
